--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://OriginalUncompiled.github.io/RoboFriends/",
+  "homepage": "https://originaluncompiled.github.io/robofriends/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
